fixed menu collapse

--- a/src/assets/style/global.less
+++ b/src/assets/style/global.less
@@ -17,4 +17,7 @@
 	&-start {
 		.flex.start();
 	}
+	&-end {
+		.flex.end();
+	}
 }
