--- a/src/assets/style/variable.less
+++ b/src/assets/style/variable.less
@@ -50,7 +50,12 @@
 	}
 	.start() {
 		.mix-in-flex();
-		justify-content: center;
+		justify-content: start;
+		align-items: center;
+	}
+	.end() {
+		.mix-in-flex();
+		justify-content: right;
 		align-items: center;
 	}
 }
